# cslibs_arff

./: CMakeLists.txt  package.xml
.github/workflows/: catkin_make_isolated.yml
cmake/: add_unit_test.cmake
include/cslibs_arff/: arff_attr.h  arff_data.h  arff_instance.h  arff_lexer.h  arff_parser.h  arff_scanner.h  arff_token.h  arff_utils.h  arff_value.h
src/tests/: arff_attr_t.cpp  arff_data_t.cpp  arff_instance_t.cpp  arff_lexer_t.cpp  arff_parser_t.cpp  arff_scanner_t.cpp  arff_token_t.cpp  arff_utils_t.cpp  arff_value_t.cpp  main.cpp
