<?xml version="1.0"?>
<package>
  <name>cslibs_arff</name>
  <version>0.0.0</version>
  <description>The cslibs_arff package</description>

  <maintainer email="hanten@uni-tuebingen.de">hanten</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
